// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScriptAttr(CrossOrigin) should override script crossorigin from config: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	  return {};
+/******/ 	  mode = mode || 'load';
+/******/
+/******/ 	  var result = {};
+/******/
+/******/ 	  (function() {
+/******/ 	    if (url.indexOf(window.location.origin + '/') !== 0) {
+/******/ 	      result.crossOrigin = 'anonymous';
+/******/ 	    }
+/******/ 	  })();
+/******/
+/******/ 	  return result;
"
`;

exports[`ScriptAttr(CrossOrigin) should override script crossorigin from options: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	  return {};
+/******/ 	  mode = mode || 'load';
+/******/
+/******/ 	  var result = {};
+/******/
+/******/ 	  (function() {
+/******/ 	    if (url.indexOf(window.location.origin + '/') !== 0) {
+/******/ 	      result.crossOrigin = 'with-credentials';
+/******/ 	    }
+/******/ 	  })();
+/******/
+/******/ 	  return result;
"
`;
